--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "history": "^5.0.0",
+    "netlify-cli": "^3.30.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -42,7 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "netlify-cli": "^3.30.7"
-  }
+  "devDependencies": {}
 }
